--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .close-button {
@@ -66,4 +67,28 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* solution */
+
+.modal{
+  padding: 16px;
+  display:flex;
+  gap: 16px;
+  
+}
+
+.icon{
+  flex-shrink: 0;
+}
+.header{
+  display: flex;
+  font-weight: bold;
+  font-size: large;
+  margin-bottom: 8px;
+  align-items: center;
+  justify-content: space-between;
+}
+.text {
+  margin-bottom: 16px;
 }
